<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:adjustViewBounds="true"
        android:src="@drawable/splash_node"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imgDisc" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amita_bold"
        android:text="@string/strMake"
        android:textAlignment="center"
        android:textColor="#4C7795"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/praveensmedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/praveensmedia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/strMkBy"
        android:textAlignment="center"
        android:textColor="#4C7795"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/logo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/strMFD"
        android:textAlignment="center"
        android:textColor="#4C7795"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_outline"
        android:text="@string/strDNS"
        android:textAlignment="center"
        android:textColor="#4C7795"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>