<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Config">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/debug_back"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            app:adSize="MEDIUM_RECTANGLE"
            app:adUnitId="@string/bannerConfig" />

    </LinearLayout>

   <!-- <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/debug_back"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/txtSPT"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="8dp"
        android:padding="2dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/debug_back">

            <TextView
                android:id="@+id/linkurl2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/text_backg"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txtLink"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/responsetxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/responsetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txtRSP"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/response"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/response"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/debug_back"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/hintResponse"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/URL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                />

            <TextView
                android:id="@+id/URL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/debug_back"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/hintUrlSend"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/yourSSID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/updateCred"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/home_buttons"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txtCRED"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/beloUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/beloUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txtWEB"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/yourSSID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hintSSID"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/yourPASS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/yourPASS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hintPASS"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/updateCred"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>